--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^8.0"
     },
     "require-dev": {
-        "pestphp/pest": "^3.0",
+        "pestphp/pest": "^1.0|^2.0|^3.0",
         "laravel/pint": "^1.0",
         "spatie/ray": "^1.28"
     },
