--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         }
     ],
     "require": {
-        "php": "^8.0"
+        "php": "^8.1"
     },
     "require-dev": {
-        "pestphp/pest": "^1.0|^2.0|^3.0",
+        "pestphp/pest": "^2.0|^3.0",
         "laravel/pint": "^1.0",
         "spatie/ray": "^1.28"
     },
